# kentus_api

./: Cargo.toml  README.md
migrations/: 20240406154226_create_temperature_table.sql  20250523200029_create_outdoor_temperature_table.sql
src/: cors.rs  main.rs
