[package]
name = "kentusapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
ringbuffer = "0.15.0"
rocket = "0.5.0-rc.3"
serde = "1.0.190"
serde_json = "1.0.107"
serialport = "4.2.2"
