[package]
name = "kentusapi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy_macro = "0.15.7"
rocket = { version = "0.5.0-rc.3", features = ["json"]}
serde = "1.0.190"
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono" ] }

# always build sqlx macros in release
[profile.dev.package.sqlx-macros]
opt-level = 3
